<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MusicPlayerFragment">

    <TextView
        android:id="@+id/song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/unknown_song"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/album_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/album_cover"
        />

    <TextView
        android:id="@+id/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/unknown_artist"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/album_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/song"
        />

    <TextView
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/unknown_album"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/album_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/artist"
        />

    <ImageView
        android:id="@+id/album_cover"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/song_cover"
        android:src="@drawable/default_cover"
        android:scaleType="centerCrop"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.media3.ui.LegacyPlayerControlView
        android:id="@+id/music_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album_cover"
        />

    <TextView
        android:id="@+id/refresh_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refresh_tv"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/refresh_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="refresh_tv, refresh_button"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/music_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="album_cover, song, artist, album, music_player"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
