<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/rv_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:padding="10dp"
        android:src="@drawable/default_cover"
        android:scaleType="centerCrop"
        android:contentDescription="@string/song_cover"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/rv_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/unknown_song"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="@id/rv_image"
        app:layout_constraintStart_toEndOf="@id/rv_image"
        />

    <TextView
        android:id="@+id/rv_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/unknown_artist"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/rv_image"
        app:layout_constraintTop_toBottomOf="@id/rv_song"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
